# XCDE-Save-Editor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/xcde_editor/: __init__.py  __main__.py  logging_config.py
src/xcde_editor/backup/: __init__.py  manager.py
src/xcde_editor/core/: __init__.py  constants.py  parser.py  types.py  validator.py  writer.py
src/xcde_editor/ui/: __init__.py  app.py
src/xcde_editor/ui/dialogs/: __init__.py  about.py  confirm.py
src/xcde_editor/ui/widgets/: __init__.py  arts_tab.py  backup_tab.py  character_tab.py  economy_tab.py  log_panel.py  save_selector.py
tests/: conftest.py  test_backup_manager.py  test_parser.py  test_validator.py  test_writer.py
