[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xcde-save-editor"
version = "0.1.0"
description = "GUI save editor for Xenoblade Chronicles: Definitive Edition"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "DeJordev" }]
keywords = ["xenoblade", "save-editor", "game"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "PyQt6>=6.7",
]

[project.scripts]
xcde-editor = "xcde_editor.__main__:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.11",
    "pytest>=8.3",
    "pytest-qt>=4.4",
    "pytest-cov>=6.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11",
    "pytest>=8.3",
    "pytest-qt>=4.4",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xcde_editor"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "ANN",      # flake8-annotations
    "RUF",      # ruff-specific
]
ignore = [
    "TC001",    # TYPE_CHECKING imports — unnecessary for a small desktop app
    "TC002",
    "TC003",
]

[tool.ruff.lint.isort]
known-first-party = ["xcde_editor"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false   # PyQt6 stubs don't fully type .connect() and overloaded methods

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src/xcde_editor"]
